<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tfm.bleapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_datasets"
        android:name="com.tfm.bleapp.ui.datasets.DatasetsFragment"
        android:label="@string/title_datasets"
        tools:layout="@layout/fragment_datasets" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.tfm.bleapp.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scanner" />
</navigation>