<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >

    <EditText
        android:id="@+id/ipAddressEntry"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="0dp"
        android:ems="8"
        android:inputType="text"
        android:hint="@string/server_ip_address_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="192.168.0.14"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/tcpPortEntry"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:ems="3"
        android:inputType="number"
        android:text="@string/defaultPort"
        android:hint="@string/server_tcp_port_description"
        app:layout_constraintStart_toEndOf="@id/ipAddressEntry"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="9999"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/pingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@id/tcpPortEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ping" />

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipAddressEntry"
        android:text="@string/status_disconnected" />

    <TextView
        android:id="@+id/scenarioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/connectionStatus"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/scenarioLabel" />

    <Spinner
        android:id="@+id/scenarioSpinner"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/scenarioLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/blueprintView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/blueprint"
        android:layout_marginTop="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="115dp"
        app:layout_constraintTop_toBottomOf="@id/scenarioSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>