<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.datasets.DatasetsFragment">

    <TextView
        android:id="@+id/datasetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dataset_label" />

    <Spinner
        android:id="@+id/datasetSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/datasetLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/datasetSpinner"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/acquisition_point" />

    <Spinner
        android:id="@+id/pointSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/pointLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/pointSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/capture" />

    <ImageView
        android:id="@+id/blueprintView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/blueprint"
        android:layout_marginTop="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintTop_toBottomOf="@id/pointSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>